<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="5dip"
	>

	<!-- ====================== Tools ====================== -->
	
	<TextView style="@style/PrefsGroupFirst" android:text="@string/prefsGroupTools" /> 
	
    <Button
    	android:id="@+id/prefsActionSortAlpha"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsSortAZ"
	    android:layout_marginTop="20dip"
	    android:layout_marginBottom="10dip"
	    />

	<!-- ====================== Setup ====================== -->
	
	<TextView style="@style/PrefsGroup" android:text="@string/prefsGroupSetup" /> 
	
	<LinearLayout
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:orientation="horizontal"
	    android:padding="@dimen/mainPadding"
	    >
    
	    <TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/prefsSeparator"
		    style="@style/PrefsLabel"
		    />
		    
	    <EditText
	    	android:id="@+id/prefsSeparator"
		    android:layout_width="60dip"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:singleLine="true"
		    android:maxLength="2"
		    />
	    
    </LinearLayout>
    
    <CheckBox style="@style/PrefsLabel"
    	android:id="@+id/prefsFullUpdateOnChange"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/prefsUpdateWithNewSep"
	    />
	    
	<!-- ====================== ABOUT ====================== -->
	<TextView style="@style/PrefsGroup" android:text="About" android:layout_marginTop="10dip" /> 
	
    <TextView
    	android:id="@+id/prefsLinkAbout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="\u2192 About"
	    android:layout_marginTop="15dip"
	    android:focusable="true"
	    />
	    
    <TextView
    	android:id="@+id/prefsLinkToMarket"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="\u2192 Link to Android Market - please rate"
	    android:layout_marginTop="15dip"
	    android:focusable="true"
	    />
	
	<!-- ====================== done ====================== -->
	<View
	    android:layout_height="15dip"
	    android:layout_width="fill_parent"
		/>
		
</LinearLayout>
