<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:paddingTop="0dip"
    android:paddingLeft="@dimen/mainPadding"
    android:paddingRight="@dimen/mainPadding"
    android:paddingBottom="@dimen/mainPadding"
    >
    
    <!-- ruler to allow more width on landscape mode (otherwise we get trimmed down to the button panel width) -->
    <View android:layout_width="380dip" android:layout_height="0dip" />
    
    <!-- TITLE -->
    <TextView style="@style/EditBodyLabel" android:text="@string/editTitle" />
    <EditText style="@style/EditBodyTextInput"
    	android:id="@+id/editBookmarkNewTitle"
	    android:inputType="textCapWords"
	    />
	    
    <!-- FOLDER -->
    <TextView style="@style/EditBodyLabel" android:text="@string/editParentFolder" />
    <Spinner 
        android:id="@+id/editBookmarkParentFolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
    />

    <!-- NEW FOLDER -->
    <TextView style="@style/EditBodyLabel" android:text="@string/editAddToNewFolder" />
    <EditText style="@style/EditBodyTextInput"
        android:id="@+id/editBookmarkAddToNewFolder"
	    android:inputType="textCapWords"
    />

    <!-- URL -->
	<LinearLayout android:id="@+id/editBookmarkUrlContainer"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	    <TextView style="@style/EditBodyLabel" android:text="@string/editUrl" />
	    <EditText style="@style/EditBodyTextInput"
	        android:id="@+id/editBookmarkUrl"
		    android:inputType="textUri"
	    />
	</LinearLayout>

    <!-- DELETE -->
	<LinearLayout
        android:id="@+id/editBookmarkDeletePanel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="right|center_vertical"
		android:layout_marginTop="10dip"
	    >
	    <TextView
	        android:id="@+id/editBookmarkDeleteText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dip"
		    />
	    <ImageView
	        android:id="@+id/editBookmarkDeleteIcon"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dip"
		    android:focusable="true"
		    android:src="@drawable/delete"
		    />
	</LinearLayout>

    <!-- CREATE SHORTCUT -->
	<LinearLayout
        android:id="@+id/editBookmarkCreateShortcutPanel"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="right|center_vertical"
		android:layout_marginTop="20dip"
	    >
	    <TextView
	        android:id="@+id/editCreateShortcutText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dip"
	        android:text="@string/commonCreateShortcut"
		    />
	    <ImageView
	        android:id="@+id/editCreateShortcutIcon"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="5dip"
		    android:focusable="true"
		    android:src="@drawable/home"
		    />
	</LinearLayout>
	
	<!-- ====================== done ====================== -->
	<View
	    android:layout_height="5dip"
	    android:layout_width="fill_parent"
		/>
		
</LinearLayout>
